syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

enum ForgeQueueManipulateType {
    FORGE_QUEUE_MANIPULATE_TYPE_RECEIVE_OUTPUT = 0;
    FORGE_QUEUE_MANIPULATE_TYPE_STOP_FORGE = 1;
}

enum MaterialDeleteReturnType {
    MATERIAL_DELETE_RETURN_BAG = 0;
    MATERIAL_DELETE_RETURN_SEED = 1;
}

message PlayerStoreNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 672;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated Item item_list = 15;
    uint32 weight_limit = 8;
    StoreType store_type = 2;
}

message StoreWeightLimitNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 698;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 weapon_count_limit = 2;
    StoreType store_type = 7;
    uint32 material_count_limit = 4;
    uint32 reliquary_count_limit = 6;
    uint32 furniture_count_limit = 9;
    uint32 weight_limit = 15;
}

message StoreItemChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 612;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    StoreType store_type = 12;
    repeated Item item_list = 10;
}

message StoreItemDelNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 635;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint64 guid_list = 12;
    StoreType store_type = 15;
}

message ItemHint {
    uint32 item_id = 8;
    bool is_new = 2;
    uint32 count = 15;
    uint64 guid = 4;
}

message ItemAddHintNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 607;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    bool is_position_valid = 14;
    uint32 quest_id = 3;
    uint32 reason = 6;
    bool is_general_reward_hiden = 15;
    repeated ItemHint item_list = 10;
    bool is_transfered_from_avatar_card = 12;
    Vector position = 9;
    repeated ItemHint overflow_transformed_item_list = 8;
}

message UseItemReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 690;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 count = 13;
    uint64 target_guid = 14;
    uint64 guid = 10;
    bool is_enter_mp_dungeon_team = 15;
    uint32 option_idx = 7;
}

message UseItemRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 673;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 guid = 5;
    uint64 target_guid = 1;
    uint32 item_id = 4;
    uint32 option_idx = 8;
    int32 retcode = 14;
}

message DropItemReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 699;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    Vector pos = 11;
    StoreType store_type = 1;
    uint32 count = 2;
    uint64 guid = 13;
}

message DropItemRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 631;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 9;
    uint64 guid = 1;
    StoreType store_type = 15;
}

message WearEquipReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 697;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 equip_guid = 7;
    uint64 avatar_guid = 5;
}

message WearEquipRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 681;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 5;
    uint64 equip_guid = 1;
    uint64 avatar_guid = 7;
}

message TakeoffEquipReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 605;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 8;
    uint32 slot = 15;
}

message TakeoffEquipRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 682;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 avatar_guid = 9;
    int32 retcode = 6;
    uint32 slot = 10;
}

message AvatarEquipChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 647;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 10;
    uint64 equip_guid = 13;
    SceneReliquaryInfo reliquary = 1;
    SceneWeaponInfo weapon = 15;
    uint32 item_id = 14;
    uint32 equip_type = 8;
}

message WeaponUpgradeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 639;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint64 food_weapon_guid_list = 1;
    repeated ItemParam item_param_list = 15;
    uint64 target_weapon_guid = 4;
}

message WeaponUpgradeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 653;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 cur_level = 7;
    int32 retcode = 11;
    uint32 old_level = 8;
    repeated ItemParam item_param_list = 2;
    uint64 target_weapon_guid = 6;
}

message WeaponPromoteReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 622;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 target_weapon_guid = 5;
}

message WeaponPromoteRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 665;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 target_weapon_guid = 3;
    uint32 old_promote_level = 7;
    uint32 cur_promote_level = 12;
    int32 retcode = 4;
}

message ReliquaryUpgradeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 604;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated ItemParam item_param_list = 11;
    uint64 target_reliquary_guid = 6;
    repeated uint64 food_reliquary_guid_list = 12;
}

message ReliquaryUpgradeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 693;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 old_level = 4;
    uint32 cur_level = 13;
    uint64 target_reliquary_guid = 9;
    repeated uint32 cur_append_prop_list = 2;
    uint32 power_up_rate = 6;
    repeated uint32 old_append_prop_list = 15;
    int32 retcode = 5;
}

message ReliquaryPromoteReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 627;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 item_guid = 10;
    uint64 target_guid = 13;
}

message ReliquaryPromoteRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 694;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 old_promote_level = 10;
    uint64 target_reliquary_guid = 6;
    repeated uint32 cur_append_prop_list = 9;
    int32 retcode = 12;
    uint32 cur_promote_level = 2;
    repeated uint32 old_append_prop_list = 8;
}

message AvatarCardChangeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 688;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 item_id = 6;
    uint64 avatar_guid = 14;
    uint32 count = 7;
}

message AvatarCardChangeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 626;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
}

message GrantRewardNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 663;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    Reward reward = 6;
}

message WeaponAwakenReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 695;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 item_guid = 10;
    map<uint32, uint32> affix_level_map = 7;
    uint64 target_weapon_guid = 9;
}

message WeaponAwakenRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 606;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 9;
    uint64 avatar_guid = 10;
    map<uint32, uint32> old_affix_level_map = 4;
    uint32 target_weapon_awaken_level = 2;
    uint64 target_weapon_guid = 15;
    map<uint32, uint32> cur_affix_level_map = 11;
}

message ItemCdGroupTimeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 634;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint32, uint64> item_cd_map = 9;
}

message DropHintNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 650;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    Vector position = 7;
    repeated uint32 item_id_list = 14;
}

message CombineReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 643;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 combine_count = 12;
    uint32 combine_id = 9;
    uint64 avatar_guid = 14;
}

message CombineRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 674;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ItemParam cost_item_list = 3;
    int32 retcode = 7;
    repeated ItemParam total_extra_item_list = 6;
    uint32 combine_id = 11;
    repeated ItemParam total_random_item_list = 9;
    repeated ItemParam result_item_list = 2;
    uint32 combine_count = 13;
    repeated ItemParam total_return_item_list = 12;
    uint64 avatar_guid = 10;
}

message ForgeQueueData {
    uint32 finish_count = 13;
    uint32 total_finish_timestamp = 14;
    uint32 avatar_id = 7;
    uint32 queue_id = 1;
    uint32 unfinish_count = 10;
    uint32 next_finish_timestamp = 11;
    uint32 forge_id = 15;
}

message ForgeQueueDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 676;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    map<uint32, ForgeQueueData> forge_queue_map = 7;
    repeated uint32 removed_forge_queue_list = 6;
}

message ForgeGetQueueDataReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 646;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message ForgeGetQueueDataRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 641;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint32, ForgeQueueData> forge_queue_map = 2;
    int32 retcode = 15;
    uint32 max_queue_num = 6;
}

message ForgeStartReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 649;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 avatar_id = 7;
    uint32 forge_id = 4;
    uint32 forge_count = 6;
}

message ForgeStartRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 691;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 8;
}

message ForgeQueueManipulateReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 624;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 forge_queue_id = 5;
    ForgeQueueManipulateType manipulate_type = 13;
}

message ForgeQueueManipulateRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 656;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    ForgeQueueManipulateType manipulate_type = 4;
    repeated ItemParam extra_output_item_list = 13;
    repeated ItemParam return_item_list = 10;
    int32 retcode = 1;
    repeated ItemParam output_item_list = 9;
}

message ResinChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 642;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 next_add_timestamp = 6;
    uint32 cur_buy_count = 4;
    uint32 cur_value = 12;
}

message BuyResinReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 602;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message BuyResinRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 619;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 cur_value = 10;
    int32 retcode = 5;
}

message MaterialDeleteReturnNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 661;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint32, uint32> return_item_map = 5;
    MaterialDeleteReturnType type = 8;
    map<uint32, uint32> delete_material_map = 6;
}

message TakeMaterialDeleteReturnReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 629;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    MaterialDeleteReturnType type = 8;
}

message TakeMaterialDeleteReturnRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 657;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 14;
}

message MaterialDeleteUpdateNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 700;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message McoinExchangeHcoinReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 616;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 hcoin = 5;
    uint32 mcoin_cost = 1;
}

message McoinExchangeHcoinRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 687;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 mcoin_cost = 8;
    uint32 hcoin = 7;
    int32 retcode = 4;
}

message MaterilaInfo {
    uint32 count = 11;
    uint64 guid = 5;
}

message DestroyMaterialReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 640;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated MaterilaInfo material_list = 5;
}

message DestroyMaterialRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 618;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 item_count_list = 12;
    repeated uint32 item_id_list = 13;
    int32 retcode = 11;
}

message SetEquipLockStateReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 666;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_locked = 15;
    uint64 target_equip_guid = 9;
}

message SetEquipLockStateRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 668;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 target_equip_guid = 14;
    int32 retcode = 13;
    bool is_locked = 10;
}

message CalcWeaponUpgradeReturnItemsReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 633;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint64 food_weapon_guid_list = 15;
    uint64 target_weapon_guid = 12;
    repeated ItemParam item_param_list = 3;
}

message CalcWeaponUpgradeReturnItemsRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 684;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ItemParam item_param_list = 4;
    int32 retcode = 15;
    uint64 target_weapon_guid = 8;
}

message ForgeDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 680;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 forge_id_list = 5;
    map<uint32, ForgeQueueData> forge_queue_map = 8;
    uint32 max_queue_num = 14;
}

message ForgeFormulaDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 689;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    bool is_locked = 15;
    uint32 forge_id = 13;
}

message CombineDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 659;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 combine_id_list = 5;
}

message CombineFormulaDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 632;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 combine_id = 6;
    bool is_locked = 3;
}

message ClosedItemNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 614;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 item_id_list = 8;
}

message CheckAddItemExceedLimitNotify {
    enum ItemExceedLimitMsgType {
        ITEM_EXCEED_LIMIT_MSG_DEFAULT = 0;
        ITEM_EXCEED_LIMIT_MSG_TEXT = 1;
        ITEM_EXCEED_LIMIT_MSG_DIALOG = 2;
        ITEM_EXCEED_LIMIT_MSG_DIALOG_NONBLOCK = 3;
    }

    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 692;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    bool is_drop = 5;
    ItemExceedLimitMsgType msg_type = 4;
    repeated uint32 exceeded_item_type_list = 10;
    repeated uint32 exceeded_item_list = 12;
    uint32 reason = 14;
}

message SetIsAutoUnlockSpecificEquipReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 620;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_auto_unlock_specific_equip = 14;
}

message SetIsAutoUnlockSpecificEquipRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 664;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 3;
}

message ReliquaryDecomposeReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 638;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 config_id = 13;
    uint32 target_count = 9;
    repeated uint64 guid_list = 8;
}

message ReliquaryDecomposeRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 611;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 retcode = 3;
    repeated uint64 guid_list = 14;
}

message ReliquaryFilterStateSaveNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 644;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    map<uint32, uint32> reliquary_filter_state_map = 8;
}

message ReliquaryFilterStateNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 686;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    map<uint32, uint32> reliquary_filter_state_map = 5;
}
