syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

enum ShopGoodsDisableType {
    SHOP_GOODS_DISABLE_NONE = 0;
    SHOP_GOODS_DISABLE_TALENT_FULL = 1;
    SHOP_GOODS_DISABLE_FURNITURE_FORMULA_UNLOCKED = 2;
    SHOP_GOODS_DISABLE_COSTUME_UNLOCKED = 3;
    SHOP_GOODS_DISABLE_BGM_UNLOCKED = 4;
    SHOP_GOODS_DISABLE_GCG_CARD_EXCEED = 5;
    SHOP_GOODS_DISABLE_GCG_CARD_FACE_UNLOCKED = 6;
    SHOP_GOODS_DISABLE_GCG_CARD_BACK_UNLOCKED = 7;
    SHOP_GOODS_DISABLE_GCG_FIELD_UNLOCKED = 8;
}

message ShopGoods {
    uint32 discount_end_time = 258;
    uint32 min_level = 8;
    uint32 end_time = 11;
    repeated ItemParam cost_item_list = 3;
    uint32 secondary_sheet_id = 318;
    uint32 hcoin = 1;
    uint32 mcoin = 14;
    uint32 discount_id = 1998;
    uint32 single_limit = 247;
    uint32 goods_id = 13;
    uint32 next_refresh_time = 7;
    uint32 max_level = 4;
    uint32 disable_type = 6;
    uint32 discount_begin_time = 574;
    repeated uint32 pre_goods_id_list = 2;
    uint32 begin_time = 5;
    uint32 scoin = 15;
    uint32 bought_num = 10;
    uint32 buy_limit = 12;
    ItemParam goods_item = 9;
}

message Shop {
    repeated ShopConcertProduct concert_product_list = 3;
    repeated ShopGoods goods_list = 15;
    uint32 city_reputation_level = 2;
    repeated ShopCardProduct card_product_list = 14;
    repeated ShopMcoinProduct mcoin_product_list = 7;
    uint32 next_refresh_time = 11;
    uint32 city_id = 10;
    uint32 shop_type = 13;
}

message GetShopReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 772;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 shop_type = 13;
}

message GetShopRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 798;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    Shop shop = 11;
    int32 retcode = 2;
}

message BuyGoodsReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 712;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 buy_count = 14;
    ShopGoods goods = 15;
    uint32 shop_type = 7;
}

message BuyGoodsRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 735;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 buy_count = 14;
    ShopGoods goods = 12;
    uint32 shop_type = 11;
    int32 retcode = 2;
    repeated ShopGoods goods_list = 5;
}

message GetShopmallDataReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 707;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}

message GetShopmallDataRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 721;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 shop_type_list = 15;
    int32 retcode = 3;
}

message ActivityShopSheetInfo {
    uint32 end_time = 1;
    uint32 begin_time = 12;
    uint32 sheet_id = 2;
}

message GetActivityShopSheetInfoReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 703;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 shop_type = 7;
}

message GetActivityShopSheetInfoRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 790;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ActivityShopSheetInfo sheet_info_list = 6;
    uint32 shop_type = 8;
    int32 retcode = 13;
}

message BuyGoodsParam {
    uint32 buy_count = 12;
    ShopGoods goods = 13;
}

message BatchBuyGoodsReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 773;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 shop_type = 7;
    repeated BuyGoodsParam buy_goods_list = 2;
}

message BatchBuyGoodsRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 799;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ShopGoods goods_list = 9;
    int32 retcode = 1;
    repeated BuyGoodsParam buy_goods_list = 5;
    uint32 shop_type = 14;
}
